--- a/package.json
+++ b/package.json
@@ -1,18 +1,29 @@
 {
-	"name": "sadraiiali.github.io",
-	"version": "0.0.1",
-	"private": true,
-	"scripts": {
-		"dev": "vite dev",
-		"build": "vite build",
-		"preview": "vite preview"
-	},
-	"devDependencies": {
-		"@sveltejs/adapter-auto": "^3.0.0",
-		"@sveltejs/kit": "^2.0.0",
-		"@sveltejs/vite-plugin-svelte": "^3.0.0",
-		"svelte": "^4.2.7",
-		"vite": "^5.0.3"
-	},
-	"type": "module"
+  "name": "sadraiiali.github.io",
+  "version": "0.0.1",
+  "private": true,
+  "scripts": {
+    "dev": "vite dev",
+    "build": "vite build",
+    "preview": "vite preview",
+    "deploy": "npx gh-pages -d build"
+  },
+  "devDependencies": {
+    "@sveltejs/adapter-auto": "^3.0.0",
+    "@sveltejs/adapter-static": "^3.0.1",
+    "@sveltejs/kit": "^2.0.0",
+    "@sveltejs/vite-plugin-svelte": "^3.0.0",
+    "autoprefixer": "^10.4.19",
+    "gh-pages": "^6.1.1",
+    "postcss": "^8.4.38",
+    "sass": "^1.74.1",
+    "svelte": "^4.2.7",
+    "svelte-preprocess": "^5.1.3",
+    "tailwindcss": "^3.4.3",
+    "vite": "^5.0.3"
+  },
+  "type": "module",
+  "dependencies": {
+    "svelte-motion": "^0.12.2"
+  }
 }
